# Hexapod_Anechka

./: .gitignore  README.md
_Bluetooth/: dummy.uvopt  dummy.uvproj
_Bluetooth/src/main/: main.c
_Interface/Anechka/: Anechka.pro  CMakeLists.txt  anechka.cpp  anechka.h  anechka.ui  main.cpp
_Interface/Anechka/ConnectButton/: connect_button.cpp  connect_button.h  connect_button.ui
_Moving/: dummy.uvgui  dummy.uvopt  dummy.uvproj
_Moving/src/main/: main.c
